Fix misalignment for buttons in tab bar

--- a/chrome/phoenix-tabs-bar.css
+++ b/chrome/phoenix-tabs-bar.css
@@ -7,7 +7,7 @@
   --toolbarbutton-inner-padding: 8px !important;
 }
 
-#tabbrowser-tabs {
+#TabsToolbar-customization-target {
   margin-top: var(--phoenix-window-dragging-area-height);
 }
 
